--- a/file.html
+++ b/file.html
@@ -4,23 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sergei's home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <style>
-        p, h1 {
-            color: aqua;
-           
-
-        }
-        .view {
-            width: 500px;
-            height: 300px;
-            
-        }
-        .view1 {
-            color: black;
-        }
-    </style>
+   
     <p>
         <h1>Всем, привет!</h1>
         <h2>Всем, привет!</h2>
@@ -59,7 +46,20 @@
         Я кнопка2
     </button>
 </div>
-
+<div>
+<table border="1">
+    <tr>
+        <td><a href="https://muravei33.ru" target="_blank"><button>
+            раз
+        </button></a></td>
+        <td>еще раз</td>
+    </tr>
+    <tr>
+        <td>два</td>
+        <td>еще два</td>
+    </tr>
+</table>
+</div>
 
 </style>
 </body>
