--- a/file.html
+++ b/file.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sergei's home</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Seymour+One&display=swap" rel="stylesheet"> -->
 </head>
 <body>
    
@@ -60,6 +65,7 @@
     </tr>
 </table>
 </div>
+<p><img src="cool-fun.gif"alt="Вот моя гифка"></p>
 
 </style>
 </body>
