--- a/file.html
+++ b/file.html
@@ -13,6 +13,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Seymour+One&display=swap" rel="stylesheet"> -->
 </head>
 <body>
+    <div class="container">
+        <diV>
+             <h1>Главная</h1>
+            </diV>
+        <diV>
+            <h1>Киса</h1>
+        </diV>
+       
+        
+        <a href="lesson2.html">Фото</a>
+    </div>
    
     <p>
         <h1>Всем, привет!</h1>
