--- a/file.html
+++ b/file.html
@@ -14,19 +14,22 @@
 </head>
 <body>
     <div class="container">
-        <diV>
+        <div class="main">
              <h1>Главная</h1>
-            </diV>
-        <diV>
+        </div>
+        <div class="cat">
             <h1>Киса</h1>
-        </diV>
+        </div>
+        <div class="g">
+            <h1>gggggg</h1>
+        </div>
        
         
-        <a href="lesson2.html">Фото</a>
+        <!-- <a href="lesson2.html">Фото</a> -->
     </div>
    
     <p>
-        <h1>Всем, привет!</h1>
+        <h1 class="lala">Всем, привет!</h1>
         <h2>Всем, привет!</h2>
         <h3>Всем, привет!</h3>
     </p>
