--- a/file.html
+++ b/file.html
@@ -15,17 +15,17 @@
 <body>
     <div class="container">
         <div class="main">
-             <h1>Главная</h1>
+             <h1><a href="file.html">Главная</a></h1>
         </div>
         <div class="cat">
-            <h1>Киса</h1>
+            <h1><a href="lesson2.html">Киса</a></h1>
         </div>
         <div class="g">
             <h1>gggggg</h1>
         </div>
        
         
-        <!-- <a href="lesson2.html">Фото</a> -->
+
     </div>
    
     <p>
