--- a/file.html
+++ b/file.html
@@ -55,7 +55,14 @@
     //     alert(i);
         
     // }
+    // let name = prompt('Введите ваше имя: ')
+    // function funk (){
+    //     alert(`Приыет,${name}!`);
+    // }
+    // funk();
     
+
+   
 
     </script>
     <div class="container">
